--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "http://axel7083.github.io/my-app",
+  "homepage": "http://axel7083.github.io/portfolio",
   "name": "portfolio",
-  "version": "0.1",
+  "version": "0.1.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
